<resources>
    <string name="shoe_store">Shoe Store</string>
    <!-- login -->
    <string name="action_sign_in">Sign in or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="prompt_email">enter email</string>
    <string name="prompt_password">enter password</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>

    <!-- welcome -->
    <string name="welcome">Welcome</string>
    <string name="welcome_text">We don’t try to be anything but who we are. We are an avenue for you to tell your story whether you’re a trend setter, trend follower or an individual. We value your ability to create your own personal style.\n\nHousing an extensive collection of iconic global brands, we pride ourselves on stocking the latest and greatest footwear and apparel.\n\nOur ranges are carefully selected so you can find a treasured iconic style or a newly engineered silhouette.</string>
    <string name="next"><![CDATA[Next >]]></string>

    <!-- instructions -->
    <string name="instructions">Instructions</string>
    <string name="instructions_text">The aim of the app is to create a list of shoes.\n\nEach shoe item in the list has some basic details like shoe size, description etc.\n\nYour job is to create new shoe items by entering the required details.</string>

    <!-- shoe list -->
    <string name="item_image_content_description">Shoe Image</string>

    <!-- shoe details -->
    <string name="shoe_name">Name</string>
    <string name="shoe_description">Description</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_shoe_fab_content_description">Add Shoe Button</string>
    <string name="logout">Log out</string>
    <string name="shoe_name_label">Shoe Name</string>
    <string name="shoe_name_edit_text_hint">Enter Shoe Name</string>
    <string name="shoe_company_edit_text_hint">Enter Shoe Company</string>
    <string name="shoe_size_edit_text_hint">Enter Shoe Size</string>
    <string name="shoe_description_edit_text_hint">Enter Shoe Description</string>
    <string name="shoe_company_label">Shoe Company</string>
    <string name="shoe_size_label">Shoe Size</string>
    <string name="shoe_description_label">Shoe Description</string>

</resources>
