<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/shoe_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/shoe_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layoutMargin_8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/shoe_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="@dimen/layoutMargin_16dp"
            android:contentDescription="@string/item_image_content_description"
            app:srcCompat="@drawable/adidas" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shoe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layoutMargin_16dp"
                tools:text="@string/shoe_name" />

            <TextView
                android:id="@+id/shoe_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layoutMargin_16dp"
                tools:text="@string/shoe_company" />

            <TextView
                android:id="@+id/shoe_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layoutMargin_16dp"
                tools:text="@string/shoe_size" />

            <TextView
                android:id="@+id/shoe_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layoutMargin_16dp"
                tools:text="@string/shoe_description" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>