<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/shoe_details_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layoutMargin_16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edit_text_shoe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:paddingTop="@dimen/padding_8dp"
                    android:paddingBottom="@dimen/padding_8dp"
                    android:text="@string/shoe_name"/>

                <EditText
                    android:id="@+id/edit_text_shoe_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:paddingTop="@dimen/padding_8dp"
                    android:paddingBottom="@dimen/padding_8dp"
                    android:text="@string/shoe_company"/>

                <EditText
                    android:id="@+id/edit_text_shoe_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/shoe_size" />

                <EditText
                    android:id="@+id/edit_text_shoe_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/shoe_description"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/layoutMargin_16dp"
                    android:layout_gravity="center_horizontal">

                        <Button
                            android:id="@+id/cancel_button"
                            android:layout_width="@dimen/cta_button_width"
                            android:layout_height="match_parent"
                            android:padding="@dimen/layoutMargin_8dp"
                            android:text="@string/cancel"/>

                        <Button
                            android:id="@+id/save_button"
                            android:layout_width="@dimen/cta_button_width"
                            android:layout_height="match_parent"
                            android:padding="@dimen/layoutMargin_8dp"
                            android:text="@string/save"/>
                </LinearLayout>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>