<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ShoeListFragment">

    <data>
        <variable
            name="sharedViewModel"
            type="com.udacity.shoestore.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/shoe_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fragment_vertical_margin_16dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_8dp">

                    <ImageView
                        android:id="@+id/shoe_image"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginEnd="@dimen/layoutMargin_16dp"
                        android:contentDescription="@string/item_image_content_description"
                        app:srcCompat="@drawable/adidas" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/shoe_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/layoutMargin_16dp"
                            tools:text="@string/shoe_name" />

                        <TextView
                            android:id="@+id/shoe_company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/layoutMargin_16dp"
                            tools:text="@string/shoe_company" />

                        <TextView
                            android:id="@+id/shoe_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/layoutMargin_16dp"
                            tools:text="@string/shoe_size" />

                        <TextView
                            android:id="@+id/shoe_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/layoutMargin_16dp"
                            tools:text="@string/shoe_description" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_shoe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fragment_horizontal_margin_16dp"
            android:clickable="true"
            android:contentDescription="@string/add_shoe_fab_content_description"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>