<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="WelcomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin_16dp"
            android:layout_marginStart="@dimen/fragment_horizontal_margin_16dp"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin_16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_header"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/welcome"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_vertical_margin_48dp"
                android:text="@string/welcome_text" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="@dimen/cta_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/fragment_top_margin_16dp"
                android:text="@string/next" />

        </LinearLayout>
</ScrollView>
</layout>

