<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/fragment_horizontal_margin_16dp"
        android:paddingTop="@dimen/fragment_vertical_margin_16dp"
        android:paddingRight="@dimen/fragment_horizontal_margin_16dp"
        android:paddingBottom="@dimen/fragment_vertical_margin_16dp"
        tools:context=".LoginFragment" >

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin_16dp"
            android:layout_marginTop="@dimen/fragment_vertical_margin_16dp"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin_16dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin_16dp"
            android:layout_marginTop="@dimen/fragment_vertical_margin_16dp"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin_16dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <LinearLayout
            android:id="@+id/loginButtonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_horizontal_margin_48dp"
            android:layout_marginTop="@dimen/fragment_horizontal_margin_16dp"
            android:layout_marginEnd="@dimen/fragment_horizontal_margin_48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password">

            <Button
                android:id="@+id/signIn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fragment_horizontal_margin_16dp"
                android:text="@string/action_sign_in_short"
                app:layout_constraintEnd_toStartOf="@id/register" />

            <Button
                android:id="@+id/register"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_register" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>